tests/chainsaw/disallow-gitrepo-volume/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-gitrepo
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    volumeMounts:
    - name: git
      mountPath: /git
  volumes:
  - name: git
    gitRepo:
      repository: "https://github.com/example/repo"
