tests/chainsaw/disallow-gitrepo-volume/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-gitrepo-volume
spec:
  steps:
  - name: create a bad pod with gitRepo volume
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create a good pod without gitRepo volume
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod.yaml
